--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 @plugin "daisyui";
 
 body {
   font-family: "Inter", serif;
+}
+.cinzel-font {
+  font-family: "Cinzel", serif;
 }
